import org.apache.tools.ant.filters.ReplaceTokens

apply plugin: 'java'

group = 'com.github.graycat27'
version = '0.0.6b'

sourceCompatibility = "11"
targetCompatibility = "11"

repositories {
    mavenCentral()
    maven {
        name = 'spigotmc-repo'
        url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
    maven { url "https://maven.enginehub.org/repo/" }
    maven { url 'https://jitpack.io' }
}

compileJava.options.encoding = 'UTF-8'
tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}

dependencies {
    implementation 'org.junit.jupiter:junit-jupiter:5.6.0'
    compileOnly 'org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT'
    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.4'
    implementation 'com.github.ucchyocean:LunaChat:v3.0.16'
}

processResources {
    from(sourceSets.main.resources.srcDirs) {
        filter ReplaceTokens, tokens: [version: version]
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
